--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -159,6 +159,101 @@
             </propertyGroup>
          </properties>
       </dataSet>
+      <dataSet
+            defaultDisplayName="SQL Stored Procedure Query"
+            id="org.eclipse.birt.report.data.oda.jdbc.SPSelectDataSet">
+         <dataTypeMapping
+               nativeDataType="BIT"
+               nativeDataTypeCode="-7"
+               odaScalarDataType="Integer"/>
+         <dataTypeMapping
+               nativeDataType="TINYINT"
+               nativeDataTypeCode="-6"
+               odaScalarDataType="Integer"/>
+         <dataTypeMapping
+               nativeDataType="SMALLINT"
+               nativeDataTypeCode="5"
+               odaScalarDataType="Integer"/>
+         <dataTypeMapping
+               nativeDataType="INTEGER"
+               nativeDataTypeCode="4"
+               odaScalarDataType="Integer"/>
+         <dataTypeMapping
+               nativeDataType="BIGINT"
+               nativeDataTypeCode="-5"
+               odaScalarDataType="Decimal"/>
+         <dataTypeMapping
+               nativeDataType="FLOAT"
+               nativeDataTypeCode="6"
+               odaScalarDataType="Double"/>
+         <dataTypeMapping
+               nativeDataType="REAL"
+               nativeDataTypeCode="7"
+               odaScalarDataType="Double"/>
+         <dataTypeMapping
+               nativeDataType="DOUBLE"
+               nativeDataTypeCode="8"
+               odaScalarDataType="Double"/>
+         <dataTypeMapping
+               nativeDataType="NUMERIC"
+               nativeDataTypeCode="2"
+               odaScalarDataType="Decimal"/>
+         <dataTypeMapping
+               nativeDataType="DECIMAL"
+               nativeDataTypeCode="3"
+               odaScalarDataType="Decimal"/>
+         <dataTypeMapping
+               nativeDataType="CHAR"
+               nativeDataTypeCode="1"
+               odaScalarDataType="String"/>
+         <dataTypeMapping
+               nativeDataType="VARCHAR"
+               nativeDataTypeCode="12"
+               odaScalarDataType="String"/>
+         <dataTypeMapping
+               nativeDataType="LONGVARCHAR"
+               nativeDataTypeCode="-1"
+               odaScalarDataType="String"/>
+         <dataTypeMapping
+               nativeDataType="DATE"
+               nativeDataTypeCode="91"
+               odaScalarDataType="Date"/>
+         <dataTypeMapping
+               nativeDataType="TIME"
+               nativeDataTypeCode="92"
+               odaScalarDataType="Time"/>
+         <dataTypeMapping
+               nativeDataType="TIMESTAMP"
+               nativeDataTypeCode="93"
+               odaScalarDataType="Timestamp"/>
+         <dataTypeMapping
+               nativeDataType="BINARY"
+               nativeDataTypeCode="-2"
+               odaScalarDataType="String"/>
+         <dataTypeMapping
+               nativeDataType="VARBINARY"
+               nativeDataTypeCode="-3"
+               odaScalarDataType="String"/>
+         <dataTypeMapping
+               nativeDataType="LONGVARBINARY"
+               nativeDataTypeCode="-4"
+               odaScalarDataType="String"/>
+         <dataTypeMapping
+               nativeDataType="BOOLEAN"
+               nativeDataTypeCode="16"
+               odaScalarDataType="Integer"/>
+         <properties>
+            <propertyGroup
+                  defaultDisplayName="Query Properties"
+                  name="queryProperties">
+               <property
+                     type="string"
+                     defaultDisplayName="Query Time Out (in seconds)"
+                     canInherit="true"
+                     name="queryTimeOut"/>
+            </propertyGroup>
+         </properties>
+      </dataSet>
    </extension>
    <extension
          point="org.eclipse.birt.report.data.oda.jdbc.driverinfo">
