BPS30: Migrates BIRT Data Engine to consume DTP ODA; provides plug-in adapter for ODA 2.0.x drivers; migrates FlatFile ODA driver to implement DTP ODA interfaces

--- a/data/org.eclipse.birt.data/plugin.xml
+++ b/data/org.eclipse.birt.data/plugin.xml
@@ -14,7 +14,7 @@
    <requires>
    	  <import plugin="org.junit" optional="true"/>
       <import plugin="org.eclipse.birt.core"/>
-      <import plugin="org.eclipse.birt.data.oda"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda"/>
    </requires>
    <extension-point id="aggregation" name="Custom Aggregation Extension" schema="schema/Aggregation.exsd"/>
 </plugin>
