--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -3,7 +3,7 @@ src=src
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
-oda.dir=../org.eclipse.birt.data.oda
+dtp.home=../
 bin=bin
 doc=doc
 test_src=test
