Refactoring and change build file due to add of dtp.oda

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -3,6 +3,7 @@ src=src
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
+dtp.oda.adapter.dir=../org.eclipse.birt.data.oda.adapter.dtp
 dtp.home=../
 bin=bin
 doc=doc
@@ -21,6 +22,7 @@ driverLoc=test
 dte.jar=dte.jar
 oda.jar=oda.jar
 core.jar=core.jar
+dtp.oda.adapter.jar=oda-adapter.jar
 oda.jdbc.jar=oda-jdbc.jar
 oda.flatfile.jar=oda-flatfile.jar
 
