Fix junt test error.

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -4,6 +4,7 @@ core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
 dtp.oda.adapter.dir=../org.eclipse.birt.data.oda.adapter.dtp
+birt.oda.dir=../org.eclipse.birt.data.oda
 dtp.home=../
 bin=bin
 doc=doc
@@ -25,5 +26,6 @@ core.jar=core.jar
 dtp.oda.adapter.jar=oda-adapter.jar
 oda.jdbc.jar=oda-jdbc.jar
 oda.flatfile.jar=oda-flatfile.jar
+birt.oda.jar=oda.jar
 
 
