--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -24,8 +24,8 @@
       <import plugin="org.eclipse.birt.report.designer.ui"/>
       <import plugin="org.eclipse.gef"/>
       <import plugin="org.eclipse.jface.text"/>
-      <import plugin="org.eclipse.birt.data.oda"/>
       <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda"/>
    </requires>
    <extension
          point="org.eclipse.birt.report.designer.ui.odadatasource">
