--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -17,12 +17,12 @@
       <import plugin="org.eclipse.ui"/>
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.eclipse.birt.core"/>
-      <import plugin="org.eclipse.birt.data.oda"/>
       <import plugin="org.eclipse.birt.report.model"/>
       <import plugin="org.eclipse.birt.report.designer.ui"/>
       <import plugin="org.eclipse.birt.report.data.oda.jdbc"/>
       <import plugin="org.eclipse.birt.report.data.oda.jdbc.ui"/>
       <import plugin="org.eclipse.birt.report.data.oda.sampledb"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda"/>
    </requires>
 
    <extension
