--- a/data/org.eclipse.birt.report.data.oda.sampledb/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb/plugin.xml
@@ -132,29 +132,21 @@
                   nativeDataTypeCode="93"
                   odaScalarDataType="Timestamp"/>
             <dataTypeMapping
-                  nativeDataType="BINARY"
-                  nativeDataTypeCode="-2"
-                  odaScalarDataType="Blob"/>
-            <dataTypeMapping
-                  nativeDataType="VARBINARY"
-                  nativeDataTypeCode="-3"
-                  odaScalarDataType="Blob"/>
-            <dataTypeMapping
-                  nativeDataType="LONGVARBINARY"
-                  nativeDataTypeCode="-4"
-                  odaScalarDataType="Blob"/>
-            <dataTypeMapping
                   nativeDataType="BOOLEAN"
                   nativeDataTypeCode="16"
                   odaScalarDataType="Integer"/>
             <dataTypeMapping
-                  nativeDataType="BLOB"
-                  nativeDataTypeCode="2004"
-                  odaScalarDataType="Blob"/>
+                  nativeDataType="BINARY"
+                  nativeDataTypeCode="-2"
+                  odaScalarDataType="String"/><!--Blob"/>-->
             <dataTypeMapping
-                  nativeDataType="CLOB"
-                  nativeDataTypeCode="2005"
-                  odaScalarDataType="Clob"/>
+                  nativeDataType="VARBINARY"
+                  nativeDataTypeCode="-3"
+                  odaScalarDataType="String"/><!--Blob"/>-->
+            <dataTypeMapping
+                  nativeDataType="LONGVARBINARY"
+                  nativeDataTypeCode="-4"
+                  odaScalarDataType="String"/><!--Blob"/>-->
       </dataSet>
    </extension>
 
