--- a/testsuites/org.eclipse.birt.tests.data/build.properties
+++ b/testsuites/org.eclipse.birt.tests.data/build.properties
@@ -1,4 +1,21 @@
-source.data.jar = src/
-output.data.jar = bin/
-bin.includes = plugin.xml,\
-               data.jar
+data.dir=../org.eclipse.birt.data
+core.dir=../org.eclipse.birt.core
+oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
+oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
+oda.dir=../org.eclipse.birt.data.oda
+bin=bin
+test_src=test
+def_user=user
+def_password=password
+def_host=localhost
+def_url=jdbc:derby:${def_database}
+def_database=DTETest
+lib=lib
+java_encoding=utf-8
+sourceVer=1.4
+driverLoc=test
+
+oda.jar=oda.jar
+core.jar=core.jar
+oda.jdbc.jar=oda-jdbc.jar
+oda.flatfile.jar=oda-flatfile.jar
