Update due to interface change.

--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/build.properties
@@ -9,8 +9,8 @@ dir.src=src
 dir.utest=utest
 birt.core.dir=../org.eclipse.birt.core
 birt.core.jar=core.jar
-oda.dir=../org.eclipse.birt.data.oda
-oda.jar=oda.jar
+dtp.oda.dir=../org.eclipse.datatools.connectivity.oda
+dtp.oda.jar=oda.jar
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.jdbc.jar=oda-jdbc.jar
 oda.jdbc.ui.dir=../org.eclipse.birt.report.data.oda.jdbc.ui
