--- a/data/org.eclipse.birt.data/.classpath
+++ b/data/org.eclipse.birt.data/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="/org.eclipse.birt.core/lib/junit.jar"/>
 	<classpathentry kind="lib" path="/org.eclipse.birt.report.data.oda.jdbc/derby.jar"/>
 	<classpathentry exported="true" kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
+	<classpathentry kind="src" path="/org.eclipse.birt.data.oda"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
