update tests.data project

--- a/testsuites/org.eclipse.birt.tests.data/build.properties
+++ b/testsuites/org.eclipse.birt.tests.data/build.properties
@@ -4,7 +4,7 @@ oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
 oda.dir=../org.eclipse.birt.data.oda
 bin=bin
-test_src=test
+test_src=src
 def_user=user
 def_password=password
 def_host=localhost
@@ -13,7 +13,7 @@ def_database=DTETest
 lib=lib
 java_encoding=utf-8
 sourceVer=1.4
-driverLoc=test
+driverLoc=src
 
 oda.jar=oda.jar
 core.jar=core.jar
