Add missing property

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -30,6 +30,7 @@ tablepage.label.availableItems=Available Items:
 tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
 tablepage.text.tabletype=Table
 tablepage.text.viewtype=View
+tablepage.text.procedure=Stored Procedure
 tablepage.text.All=-All-
 wizard.label.selectTables=Select Tables:
 wizard.label.selectColumns=Select one or more columns from the list.
