--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -17,6 +17,7 @@
    <requires>
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.birt.data.oda"/>
+	  <import plugin="org.eclipse.datatools.connectivity.oda"/>
    </requires>
    <extension-point id="reportItemModel" name="reportItemModel" schema="schema/reportItem.exsd"/>
    <extension-point id="encryptionHelper" name="encryptionHelper" schema="schema/encryptionHelper.exsd"/>
