--- a/model/org.eclipse.birt.report.model/plugin.xml
+++ b/model/org.eclipse.birt.report.model/plugin.xml
@@ -13,6 +13,12 @@
       <library name="lib/commons-codec-1.3.jar">
          <export name="*"/>
       </library>
+      <library name="lib/flute.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/sac.jar">
+         <export name="*"/>
+      </library>
    </runtime>
    <requires>
       <import plugin="org.eclipse.birt.core"/>
