--- a/testsuites/org.eclipse.birt.tests.data/build.properties
+++ b/testsuites/org.eclipse.birt.tests.data/build.properties
@@ -2,7 +2,9 @@ data.dir=../org.eclipse.birt.data
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
-oda.dir=../org.eclipse.birt.data.oda
+dtp.oda.adapter.dir=../org.eclipse.birt.data.oda.adapter.dtp
+birt.oda.dir=../org.eclipse.birt.data.oda
+dte.dir=../org.eclipse.birt.data
 bin=bin
 test_src=src
 def_user=user
@@ -15,7 +17,8 @@ java_encoding=utf-8
 sourceVer=1.4
 driverLoc=src
 
-oda.jar=oda.jar
 core.jar=core.jar
 oda.jdbc.jar=oda-jdbc.jar
 oda.flatfile.jar=oda-flatfile.jar
+birt.oda.jar=oda.jar
+dtp.oda.adapter.jar=oda-adapter.jar
