--- a/model/org.eclipse.birt.report.model/.classpath
+++ b/model/org.eclipse.birt.report.model/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
+	<classpathentry sourcepath="C:/Documents and Settings/Yu Li/Desktop/jtds-0.9.jar" kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
 	<classpathentry kind="lib" path="/org.eclipse.birt.core/lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/sac.jar"/>
 	<classpathentry kind="lib" path="lib/flute.jar"/>
