Completed migration of the BIRT oda.flatfile driver to DTP (BPS 30) [BZ #114458] - added related test environment setup

--- a/data/org.eclipse.birt.data/build.properties
+++ b/data/org.eclipse.birt.data/build.properties
@@ -3,6 +3,7 @@ src=src
 core.dir=../org.eclipse.birt.core
 oda.jdbc.dir=../org.eclipse.birt.report.data.oda.jdbc
 oda.flatfile.dir=../org.eclipse.birt.report.data.oda.flatfile
+dtp.oda-flatfile.dir=${dtp.home}/org.eclipse.datatools.connectivity.oda.flatfile
 dtp.oda.adapter.dir=../org.eclipse.birt.data.oda.adapter.dtp
 birt.oda.dir=../org.eclipse.birt.data.oda
 dtp.home=../
