--- a/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.sampledb.ui/plugin.xml
@@ -29,6 +29,7 @@
          point="org.eclipse.birt.report.designer.ui.odadatasource">
       
       <odaDataSourceUI id="org.eclipse.birt.report.data.oda.sampledb">
+         <newDataSourceWizard class="org.eclipse.birt.report.data.oda.sampledb.ui.SampleDataSourceCreationWizard"/>
       </odaDataSourceUI>
       
       <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet">
