--- a/data/org.eclipse.birt.report.data.oda.sampledb/plugin.properties
+++ b/data/org.eclipse.birt.report.data.oda.sampledb/plugin.properties
@@ -1,4 +1,4 @@
 dataset.editor.page.query=Query
 datasource.name=Classic Models Inc. Sample Database
 select.dataset.name=SQL Select Query
-datasource.editor.page.connection=Data source connection
+jdbc.driver.name=Classic Models Inc. SampleDB Driver
