--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
@@ -2,20 +2,50 @@
 <?eclipse version="3.0"?>
 <plugin
    id="org.eclipse.birt.report.data.oda.xml.ui"
-   name="Ui Plug-in"
-   version="1.0.0"
-   provider-name=""
+   name="BIRT XML UI Plug-in"
+   version="1.0.1"
+   provider-name="Eclipse.org"
    class="org.eclipse.birt.report.data.oda.xml.ui.UiPlugin">
-
    <runtime>
-      <library name="ui.jar">
+      <library name="xmlui.jar">
          <export name="*"/>
       </library>
    </runtime>
-
+   
    <requires>
+      <import plugin="org.eclipse.birt.report.data.oda.xml"/>
       <import plugin="org.eclipse.ui"/>
       <import plugin="org.eclipse.core.runtime"/>
+      <import plugin="org.eclipse.birt.report.designer.ui"/>
+      <import plugin="org.eclipse.birt.report.model"/>
+      <import plugin="org.eclipse.birt.core"/>
+      <import plugin="org.eclipse.datatools.connectivity.oda"/>
    </requires>
-
+   <extension
+         point="org.eclipse.birt.report.designer.ui.odadatasource">
+      <odaDataSourceUI id="org.eclipse.birt.report.data.oda.xml">
+         <newDataSourceWizard class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSourceConnectionWizard"/>
+         <dataSourceEditorPage
+               class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSourcePage"
+               displayName="xml DataSource"
+               name="selectFolder"
+               path="/"/>
+      </odaDataSourceUI>
+      
+      <odaDataSetUI id="org.eclipse.birt.report.data.oda.xml.dataSet">
+         <newDataSetWizard class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetWizard"/>
+         <dataSetEditorPage
+                  class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetSelectionPage"
+                  displayName="Xml DataSet"
+                  name="selectColumns"/>
+         <dataSetEditorPage
+                  class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XPathChoosePage"
+                  displayName="XPath"
+                  name="selectColumns"/>
+        <dataSetEditorPage
+                  class="org.eclipse.birt.report.data.oda.xml.ui.wizards.ColumnMappingPage"
+                  displayName="Column Mapping"
+                  name="selectColumns"/>
+      </odaDataSetUI>
+   </extension>
 </plugin>
