--- a/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/build.properties
@@ -1,5 +1,23 @@
+source.ui.jar = src/
+output.ui.jar = bin/
 bin.includes = plugin.xml,\
-               xmlui.jar.jar
-jars.compile.order = xmlui.jar.jar
-source.xmlui.jar = src/
-output.xmlui.jar = bin/
+               xmlui.jar
+export.dir=exports
+plugin.version=1.0.1
+dir.bin=bin
+dir.src=src
+dir.utest=utest
+birt.core.dir=../org.eclipse.birt.core
+birt.core.jar=core.jar
+dtp.oda.dir=../org.eclipse.datatools.connectivity.oda
+dtp.oda.jar=oda.jar
+oda.xml.dir=../org.eclipse.birt.report.data.oda.xml
+oda.xml.jar=oda-xml.jar
+oda.xml.ui.dir=../org.eclipse.birt.report.data.oda.xml.ui
+oda.xml.ui.jar=jdbc.jar
+designer.ui.dir=../org.eclipse.birt.report.designer.ui
+designer.ui.jar=ui.jar
+model.dir=../org.eclipse.birt.report.model
+model.jar=model.jar
+plugin.jar=xmlui.jar
+db.dir=db
