Fix XML Driver build path error,etc.

--- a/data/org.eclipse.birt.report.data.oda.xml/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml/plugin.xml
@@ -6,6 +6,18 @@
    version="1.0.1"
    provider-name="Eclipse.org">
    <runtime>
+       <library name="lib/resolver.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/xercesImpl.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/xml-apis.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/xalan.jar">
+         <export name="*"/>
+      </library>
       <library name="oda-xml.jar">
          <export name="*"/>
       </library>
