--- a/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
+++ b/model/org.eclipse.birt.report.model/src/org/eclipse/birt/report/model/metadata/MetaError.properties
@@ -23,7 +23,7 @@ MISSING_CHOICE_SET_NAME=Missing choice set name when adding a Choice Set to the 
 DUPLICATE_CHOICE_SET_NAME=Duplicate choice set names when adding the choice set [{0}] to the meta-data dictionary.
 MISSING_STRUCT_NAME=Missing structure name when adding a structure to the meta-data dictionary.
 DUPLICATE_STRUCT_NAME=Duplicate structure names when adding the structure [{0}] to the meta-data dictionary.
-MISSING_STRUCT_DEFN=Missing structure definition for structure list type property [{0}].
+MISSING_STRUCT_DEFN=Missing structure definition for structure list type property [{0}] in [{1}].
 UNREFERENCABLE_STRUCT_DEFN=Structure definition is not referencable for structure reference type property [{0}].
 MISSING_ELEMENT_TYPE=Missing element reference for element reference type property [{0}].
 UNDEFINED_ELEMENT_TYPE=Element [{0}] referenced by property [{1}] is not defined.
