--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
@@ -33,6 +33,7 @@
       </odaDataSourceUI>
       
       <odaDataSetUI id="org.eclipse.birt.report.data.oda.xml.dataSet">
+	     <addsDataSetParametersPage>false</addsDataSetParametersPage>
          <newDataSetWizard class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetWizard"/>
          <dataSetEditorPage
                   class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetSelectionPage"
