--- a/data/org.eclipse.birt.data/.classpath
+++ b/data/org.eclipse.birt.data/.classpath
@@ -3,8 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="/org.eclipse.birt.core/lib/junit.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="/org.eclipse.birt.report.data.oda.jdbc/derby.jar"/>
 	<classpathentry exported="true" kind="lib" path="/org.eclipse.birt.core/lib/js.jar"/>
 	<classpathentry kind="src" path="/org.eclipse.birt.data.oda"/>
