--- a/data/org.eclipse.birt.report.data.oda.xml/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml/plugin.xml
@@ -20,6 +20,7 @@
       </library>
    </runtime>
    <requires>
+ 	  <import plugin="org.junit" optional="true"/>
       <import plugin="org.eclipse.core.runtime"/>
       <import plugin="org.eclipse.birt.core"/>
       <import plugin="org.eclipse.datatools.connectivity.oda"/>
