--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -51,6 +51,7 @@
                   path="/"
                   displayName="%dataset.editor.page.query"
                   name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
+            <addsDataSetParametersPage>true</addsDataSetParametersPage>
        </odaDataSetUI>
     </extension>
    </plugin>
