Fix bugzilla bug 120982,120984,120985,120989,120990,120992,120993,120994,120995,120996,120997,120998

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -47,7 +47,7 @@ wizard.label.search=Search:
 wizard.label.filter=Filter:
 tablepage.label.selecttype=Type:
 tablepage.filter.warning=Please specify a filter.
-wizard.message.createDataSource=Create a new data source
+wizard.message.createDataSource=Provide the required information to connect to the JDBC data source.
 wizard.message.editDataSource=Edit the selected data source
 error.emptyDatasourceName=Data source name must not be empty
 error.upgradingConnection=Error upgrading JDBC connection information
