Fix 117450: Birt will hang when add several drivers through

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -93,4 +93,6 @@ driverManagerDialog.text.EditDriverDisplayName=Driver Display Name:
 driverManagerDialog.text.EditDriverTemplate=URL Template:
 driverManagerDialog.error.CanNotAddDriver=Can not add a duplicate jar file 
 driverManagerDialog.text.DriverError=Add Driver Error.
+driverManagerDialog.fileDelete.title=File Delete
+driverManagerDialog.fileDelete.text=File will be deleted the next time when BIRT starts. Please be aware of that especially when exchanging different versions of driver.
 
