Enhance the error message

--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/src/org/eclipse/birt/report/data/oda/jdbc/ui/nls/JdbcPluginResources.properties
@@ -9,7 +9,7 @@ sqleditor.action.copy=Copy
 sqleditor.action.paste=Paste
 sqleditor.action.selectAll=Select all
 connection.test=Test connection
-connection.success=Connection Successful.
+connection.success=Connection successful.
 connection.failed=Failed to create a connection. Please verify the connection properties.
 wizard.title.newDataSource=New Data Source
 wizard.title.selectColumns=Columns
@@ -18,21 +18,21 @@ wizard.title.createJoin=Create a join by dragging a column from one table to the
 wizard.message.selectColumns=Select one or more tables, then click the ">" button to add them to the data set.
 wizard.message.warning=Warning
 wizard.message.warning.invaliddatasource=The provided data source information is incomplete. Would you like to continue anyway?
-tablepage.label.Applyfilter=If your schema is large, use the filter to find the tables of interest.
+tablepage.label.Applyfilter=To display only relevant tables, use the filter.
 tablepage.label.selectTable=Select one or more tables, then click the ">" button to add them to the data set.
 tablepage.label.filter=Filter:
-tablepage.label.refresh=Refreshing..
+tablepage.label.refresh=Refreshing...
 tablepage.label.schema=Schema:
 tablepage.button.filter=Apply Filter
 tablepage.label.filterNote=(The filter supports wildcards. '%' matches zero or more characters. '-' matches one character)
 tablepage.title=Select the tables to appear in the data set.
 tablepage.label.availableItems=Available Items:
-tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items
+tablePage.message.maxdisplayeditems=Only {0} items can be viewed in the available list. There are more than {1} items in the data source. Please speciy a filter to search for specific items.
 tablepage.text.tabletype=Table
 tablepage.text.viewtype=View
 tablepage.text.procedure=Stored Procedure
 tablepage.text.All=-All-
-wizard.label.selectTables=Select Tables:
+wizard.label.selectTables=Select tables:
 wizard.label.selectColumns=Select one or more columns from the list.
 wizard.label.available=Available:
 wizard.label.selected=Selected:
@@ -47,13 +47,13 @@ wizard.label.search=Search:
 wizard.label.filter=Filter:
 tablepage.label.selecttype=Type:
 tablepage.filter.warning=Please specify a filter.
-wizard.message.createDataSource=Provide the required information to connect to the JDBC data source.
-wizard.message.editDataSource=Edit the selected data source
-error.emptyDatasourceName=Data source name must not be empty
-error.upgradingConnection=Error upgrading JDBC connection information
-error.duplicateName=The new name duplicates an existing name in the same name space
-error.emptyDriverclass=Driver class must not be empty
-error.emptyDatabaseUrl=URL must not be empty
+wizard.message.createDataSource=Create a new data source.
+wizard.message.editDataSource=Edit the selected data source.
+error.emptyDatasourceName=Data source name must not be empty.
+error.upgradingConnection=Error upgrading JDBC connection information.
+error.duplicateName=The new name is a duplicate of an existing name in the same name space.
+error.emptyDriverclass=Driver class must not be empty.
+error.emptyDatabaseUrl=URL must not be empty.
 joins.page.warning=Please make sure to specify atleast one join.\n Do you want to continue ?
 joins.menu.edit=Edit Join 
 joins.menu.delete=Delete Join 
@@ -64,11 +64,11 @@ joins.properties.dialog.label.operator=Join Operator
 joins.properties.dialog.label.table=Table:
 joins.properties.dialog.label.column=Column:
 joins.properties.dialog.label.jointype=Join Type
-joins.properties.dialog.label.innerjoin=Only include rows from both the tables matching the Join condition
-joins.properties.dialog.label.outerjoin=Include All rows from "{0}" and only matching rows  from "{1}"
+joins.properties.dialog.label.innerjoin=Only include rows from both the tables matching the join condition.
+joins.properties.dialog.label.outerjoin=Include all rows from "{0}" and only matching rows  from "{1}"
 joins.properties.dialog.label.fullouterjoin=Include All rows from both the tables matching the join condition.
 joins.sequence.dialog.label.title=Change Join Sequence
-joins.sequence.dialog.label.message=Change the join sequence by Selecting a join, and by using the arrow buttons.
+joins.sequence.dialog.label.message=Change the join sequence by selecting a join, and then using the arrow buttons.
 joins.sequence.dialog.fromcolumn=From Column
 joins.sequence.dialog.tocolumn=To Column
 joins.sequence.dialog.jointype=Type of Join
@@ -91,8 +91,8 @@ driverManagerDialog.text.EditDriverTitle=Edit JDBC Driver
 driverManagerDialog.text.EditDriverClassName=Driver Class Name:
 driverManagerDialog.text.EditDriverDisplayName=Driver Display Name:
 driverManagerDialog.text.EditDriverTemplate=URL Template:
-driverManagerDialog.error.CanNotAddDriver=Can not add a duplicate jar file 
-driverManagerDialog.text.DriverError=Add Driver Error.
+driverManagerDialog.error.CanNotAddDriver=Cannot add a duplicate jar file.
+driverManagerDialog.text.DriverError=Add Driver Error
 driverManagerDialog.fileDelete.title=File Delete
 driverManagerDialog.fileDelete.text=File will be deleted the next time when BIRT starts. Please be aware of that especially when exchanging different versions of driver.
 
