CheckIn:Add the propertyVisibility element to hide the queryTimeout property

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -161,6 +161,7 @@
                      canInherit="true"
                      name="queryTimeOut"/>
             </propertyGroup>
+            <propertyVisibility name="queryTimeOut" visibility="hide"/>
          </properties>
       </dataSet>
       <dataSet
@@ -264,6 +265,7 @@
                      canInherit="true"
                      name="queryTimeOut"/>
             </propertyGroup>
+            <propertyVisibility name="queryTimeOut" visibility="hide"/>
          </properties>
       </dataSet>
    </extension>
