CheckIn:Restore the plugin.xml and set the odaDataSource property hide.Fix bugzilla bug121488

--- a/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc/plugin.xml
@@ -48,6 +48,11 @@
                   name="odaURL"/>
                <property
                   type="string"
+                  defaultDisplayName="Data Source"
+                  canInherit="true"
+                  name="odaDataSource"/>
+               <property
+                  type="string"
                   defaultDisplayName="User Name"
                   canInherit="true"
                   name="odaUser"/>
@@ -58,6 +63,7 @@
                      defaultDisplayName="Password"
                      name="odaPassword"/>
             </propertyGroup>
+            <propertyVisibility name="odaDataSource" visibility="hide"/>
          </properties>
       </dataSource>
       <dataSet
