Fix Bugzilla Bug 121848When use the XML File as the datasource, the "Property Binding" should support the parameter binding of the "File_LIST".

--- a/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.xml.ui/plugin.xml
@@ -32,9 +32,8 @@
                path="/"/>
       </odaDataSourceUI>
       
-      <odaDataSetUI id="org.eclipse.birt.report.data.oda.xml.dataSet">
-	     <addsDataSetParametersPage>false</addsDataSetParametersPage>
-         <newDataSetWizard class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetWizard"/>
+      <odaDataSetUI id="org.eclipse.birt.report.data.oda.xml.dataSet" addsDataSetParametersPage = "false">
+	     <newDataSetWizard class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetWizard"/>
          <dataSetEditorPage
                   class="org.eclipse.birt.report.data.oda.xml.ui.wizards.XmlDataSetSelectionPage"
                   displayName="XML DataSet"
