--- a/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
+++ b/data/org.eclipse.birt.report.data.oda.jdbc.ui/plugin.xml
@@ -29,7 +29,7 @@
    </requires>
    <extension
          point="org.eclipse.birt.report.designer.ui.odadatasource">
-      <odaDataSourceUI id="org.eclipse.birt.report.data.oda.jdbc">
+      <odaDataSourceUI id="org.eclipse.birt.report.data.oda.jdbc" addsPropertyBindingPage = "true" >
          <newDataSourceWizard class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourceWizard"/>
          <dataSourceEditorPage
                class="org.eclipse.birt.report.data.oda.jdbc.ui.wizards.JdbcDataSourcePage"
@@ -37,21 +37,23 @@
                displayName="%datasource.editor.page.connection"
                name="org.eclipse.birt.report.data.oda.jdbc.ui.data-source-editor.connection"/>
       </odaDataSourceUI>
-      <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet">
+      <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.JdbcSelectDataSet" 
+      				addsDataSetParametersPage = "true"
+      				addsPropertyBindingPage = "true">
             <dataSetEditorPage
                   class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
                   path="/"
                   displayName="%dataset.editor.page.query"
                   name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
- 			<addsDataSetParametersPage>true</addsDataSetParametersPage>
        </odaDataSetUI>
-       <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.SPSelectDataSet">
+       <odaDataSetUI id="org.eclipse.birt.report.data.oda.jdbc.SPSelectDataSet"
+		       		addsDataSetParametersPage = "true"
+      				addsPropertyBindingPage = "true">
             <dataSetEditorPage
                   class="org.eclipse.birt.report.data.oda.jdbc.ui.editors.SQLDataSetEditorPage"
                   path="/"
                   displayName="%dataset.editor.page.query"
                   name="org.eclipse.birt.report.data.oda.jdbc.ui.data-set-editor-page1"/>
-            <addsDataSetParametersPage>true</addsDataSetParametersPage>
        </odaDataSetUI>
     </extension>
    </plugin>
